// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createAppendScript byCode should be inserted in document.body 1`] = `
<body>
  <script>
    console.log('hello world 1')
  </script>
  <script>
    console.log('hello world 2')
  </script>
</body>
`;

exports[`createAppendScript bySrc should be inserted in document.body 1`] = `
<body>
  <script
    src="https://news.test.files.bbci.co.uk/include/idt2/static/js/table.382de0dc.js"
  />
  <script
    src="https://cdn.jsdelivr.net/npm/js-hello-world@1.0.0/helloWorld.js"
  />
</body>
`;

exports[`createAppendScript code then src should be inserted in document.body in the right order 1`] = `
<body>
  <script>
    console.log('hello world 1')
  </script>
  <script
    src="https://news.test.files.bbci.co.uk/include/idt2/static/js/table.382de0dc.js"
  />
</body>
`;

exports[`createAppendScript src then code should be inserted in document.body in the right order 1`] = `
<body>
  <script
    src="https://news.test.files.bbci.co.uk/include/idt2/static/js/table.382de0dc.js"
  />
  <script>
    console.log('hello world 1')
  </script>
</body>
`;
